--- a/index.html
+++ b/index.html
@@ -495,7 +495,44 @@
       </main>
       <!-- fine main  -->
       <!-- inizio footer -->
-      <footer></footer>
+      <footer>
+        <!-- inizio main footer -->
+        <div class="main-footer">
+          <div class="main-footer-container">
+            <div class="box-slogan">
+              <div class="logo-footer">
+                <img src="img/footer-logo.png" alt="" />
+              </div>
+              <p>{{slogan}}</p>
+              <div class="button">Learn more</div>
+            </div>
+            <div class="box-tweet">
+              <h4>LATEST TWEETS</h4>
+              <div class="tweet-content">
+                <div class="fusion-img">
+                  <img src="img/fusion-logo.png" alt="" />
+                </div>
+                <p>
+                  ThemeFusion <br />
+                  <span>@Theme_Fusion</span>
+                </p>
+                <i class="fab fa-twitter"></i>
+              </div>
+              <p>
+                Why do we recommend @HubSpot for the #avada #WebsiteBuilder?
+                It's an excellent CRM with FREE tools & integrations that will
+                help you grow better. Empowering you to increase leads,
+                accelerate sales, streamline customer service, & build a
+                successful business https://bit.ly/3pz1zow
+              </p>
+              <div class="img-hub">
+                <img src="img/hub-img.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- fine main footer -->
+      </footer>
       <!-- fine footer -->
     </div>
     <!-- fine app -->
